--- a/source/resources.qrc
+++ b/source/resources.qrc
@@ -1,8 +1,9 @@
 <RCC>
-  <qresource prefix="/MainWindow">
-    <file>resources/mouse_icons/both.png</file>
-    <file>resources/mouse_icons/left.png</file>
-    <file>resources/mouse_icons/right.png</file>
-    <file>resources/window.ico</file>
-  </qresource>
+    <qresource prefix="/MainWindow">
+        <file>resources/M-Dark.png</file>
+        <file>resources/mouse_icons/both.png</file>
+        <file>resources/mouse_icons/left.png</file>
+        <file>resources/mouse_icons/right.png</file>
+        <file>resources/window.ico</file>
+    </qresource>
 </RCC>
